--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,18 @@
 *.dll
 *.so
 *.dylib
+analytics
 
 # Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Other
+.idea
+data.tar.gz
+data/*.*
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
